[tool.poetry]
name = "tonapi"
version = "0.1.0"
description = "Python SDK for tonapi.io"
readme = "README.md"
authors = [
    "delpydoc <delpydoc@proton.me>",
]
maintainers = []
repository = "https://github.com/delpydoc/tonapi"
homepage = "https://github.com/delpydoc/tonapi"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
]
keywords = ["ton", "the open network", "tonapi", "sdk"]

[tool.setuptools.package-data]
ton = [
    "distlib/linux/*",
    "distlib/darwin/*",
    "distlib/windows/*",
    "distlib/freebsd/*",
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
httpx = ">=0.23.1"

[build-system]
requires = ["poetry>=1.2.0"]
build-backend = "poetry.core.masonry.api"